[gd_scene load_steps=17 format=2]

[ext_resource path="res://assets/fonts/The Macabre.otf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/items/ink.png" type="Texture" id=2]
[ext_resource path="res://assets/buttons/InventoryButton_Pressed.png" type="Texture" id=3]
[ext_resource path="res://assets/buttons/InventoryButton.png" type="Texture" id=4]
[ext_resource path="res://assets/buttons/Inventory.png" type="Texture" id=5]
[ext_resource path="res://assets/buttons/InventoryButton_Hover.png" type="Texture" id=6]
[ext_resource path="res://assets/themes/MainTheme.tres" type="Theme" id=7]
[ext_resource path="res://Scripts/HUD.gd" type="Script" id=8]
[ext_resource path="res://Scripts/Slot.gd" type="Script" id=9]
[ext_resource path="res://assets/buttons/PauseButton_Hover.png" type="Texture" id=10]
[ext_resource path="res://assets/buttons/PauseButton_Press.png" type="Texture" id=11]
[ext_resource path="res://assets/buttons/PauseButton.png" type="Texture" id=12]
[ext_resource path="res://assets/fonts/October Crow.ttf" type="DynamicFontData" id=13]

[sub_resource type="DynamicFont" id=1]
size = 70
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 52
font_data = ExtResource( 13 )

[sub_resource type="DynamicFont" id=3]
size = 40
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="HUD" type="CanvasLayer"]
layer = 8
script = ExtResource( 8 )

[node name="Ink_Count" type="Label" parent="."]
visible = false
margin_left = 1750.98
margin_top = 190.466
margin_right = 1915.98
margin_bottom = 264.466
custom_fonts/font = SubResource( 1 )
text = "Inks: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InkSprite" type="Sprite" parent="Ink_Count"]
position = Vector2( -39.5706, 36.3288 )
scale = Vector2( 0.542811, 0.542811 )
texture = ExtResource( 2 )

[node name="InventoryButton" type="TextureButton" parent="."]
visible = false
anchor_left = 0.914
anchor_top = 0.007
anchor_right = 1.0
anchor_bottom = 0.164
margin_left = -3.88
margin_top = 0.44
margin_bottom = -0.12001
hint_tooltip = "Inventory"
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Inventory" type="Sprite" parent="InventoryButton"]
visible = false
position = Vector2( -233.442, 87.4952 )
scale = Vector2( 0.486582, 0.486582 )
z_index = 1
texture = ExtResource( 5 )

[node name="Slot1" type="TextureButton" parent="InventoryButton/Inventory"]
margin_left = -436.0
margin_top = -75.0
margin_right = -272.0
margin_bottom = 84.0
hint_tooltip = " "
mouse_default_cursor_shape = 2
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}
index = 1

[node name="Slot2" type="TextureButton" parent="InventoryButton/Inventory"]
margin_left = -257.0
margin_top = -76.0
margin_right = -102.0
margin_bottom = 83.0
hint_tooltip = " "
mouse_default_cursor_shape = 2
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}
index = 2

[node name="Slot3" type="TextureButton" parent="InventoryButton/Inventory"]
margin_left = -74.0
margin_top = -75.0
margin_right = 78.0
margin_bottom = 83.0
hint_tooltip = " "
mouse_default_cursor_shape = 2
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}
index = 3

[node name="Slot4" type="TextureButton" parent="InventoryButton/Inventory"]
margin_left = 99.0
margin_top = -74.0
margin_right = 256.0
margin_bottom = 80.0
hint_tooltip = " "
mouse_default_cursor_shape = 2
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}
index = 4

[node name="Slot5" type="TextureButton" parent="InventoryButton/Inventory"]
margin_left = 278.0
margin_top = -75.0
margin_right = 434.0
margin_bottom = 83.0
hint_tooltip = " "
mouse_default_cursor_shape = 2
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}
index = 5

[node name="Commands" type="Control" parent="InventoryButton/Inventory"]
visible = false
margin_left = 12.8164
margin_right = 52.8164
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Inspect" type="Button" parent="InventoryButton/Inventory/Commands"]
margin_left = -127.538
margin_top = 139.76
margin_right = -51.5383
margin_bottom = 167.76
rect_scale = Vector2( 3, 3 )
mouse_default_cursor_shape = 2
theme = ExtResource( 7 )
text = "INSPECT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Use" type="Button" parent="InventoryButton/Inventory/Commands"]
margin_left = -413.951
margin_top = 139.074
margin_right = -337.951
margin_bottom = 167.074
rect_scale = Vector2( 3, 3 )
mouse_default_cursor_shape = 2
theme = ExtResource( 7 )
text = "use"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Combine" type="Button" parent="InventoryButton/Inventory/Commands"]
visible = false
margin_left = 166.348
margin_top = 139.76
margin_right = 242.348
margin_bottom = 167.76
rect_scale = Vector2( 3, 3 )
mouse_default_cursor_shape = 2
theme = ExtResource( 7 )
text = "COMBINE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pause" type="TextureButton" parent="."]
visible = false
margin_right = 176.0
margin_bottom = 176.0
hint_tooltip = "Pause menu"
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 11 )
texture_hover = ExtResource( 10 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sair" type="Button" parent="."]
visible = false
anchor_left = 0.447
anchor_top = 0.026
anchor_right = 0.567
anchor_bottom = 0.174
margin_left = -9.25452
margin_top = 0.369402
margin_right = -159.654
margin_bottom = -106.471
rect_scale = Vector2( 3, 3 )
theme = ExtResource( 7 )
text = "LEAVE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveConfirm" type="Label" parent="."]
pause_mode = 2
visible = false
margin_left = 215.894
margin_top = -0.795807
margin_right = 952.894
margin_bottom = 132.204
rect_scale = Vector2( 2, 2 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 1
text = "DO YOU WANT TO SAVE YOUR PROGRESS?
One ink is used in order to save."
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Yes" type="Button" parent="SaveConfirm"]
pause_mode = 2
margin_left = 229.236
margin_top = 124.364
margin_right = 278.236
margin_bottom = 173.364
rect_scale = Vector2( 2, 2 )
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.529412, 0.52549, 0.52549, 1 )
text = "YES"
flat = true
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="No" type="Button" parent="SaveConfirm"]
pause_mode = 2
margin_left = 407.092
margin_top = 126.327
margin_right = 457.092
margin_bottom = 175.327
rect_scale = Vector2( 2, 2 )
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.529412, 0.52549, 0.52549, 1 )
text = "NO"
flat = true
__meta__ = {
"_editor_description_": ""
}
[connection signal="pressed" from="InventoryButton" to="." method="_on_InventoryButton_pressed"]
[connection signal="pressed" from="InventoryButton/Inventory/Slot1" to="." method="_on_Slot1_pressed"]
[connection signal="pressed" from="InventoryButton/Inventory/Slot2" to="." method="_on_Slot2_pressed"]
[connection signal="pressed" from="InventoryButton/Inventory/Slot3" to="." method="_on_Slot3_pressed"]
[connection signal="pressed" from="InventoryButton/Inventory/Slot4" to="." method="_on_Slot4_pressed"]
[connection signal="pressed" from="InventoryButton/Inventory/Slot5" to="." method="_on_Slot5_pressed"]
[connection signal="pressed" from="InventoryButton/Inventory/Commands/Inspect" to="." method="_on_Inspect_pressed"]
[connection signal="pressed" from="InventoryButton/Inventory/Commands/Use" to="." method="_on_Use_pressed"]
[connection signal="pressed" from="InventoryButton/Inventory/Commands/Combine" to="." method="_on_Combine_pressed"]
[connection signal="pressed" from="Pause" to="." method="_on_Pause_pressed"]
[connection signal="pressed" from="Sair" to="." method="_on_Sair_pressed"]
[connection signal="pressed" from="SaveConfirm/Yes" to="." method="_on_Yes_pressed"]
[connection signal="pressed" from="SaveConfirm/No" to="." method="_on_No_pressed"]
